syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "srvMasters.protos";

package currency;


// The greeting service definition.
service ICurrency {
  // Sends a greeting
  rpc GetCurrency(mdlCurrencyRequest) returns (mdlCurrencyList);
  rpc SaveCurrency(mdlCurrency) returns (mdlCurrencySaveResponse);
}

// The request message containing the user's name.
message mdlCurrency {
  string currencyId = 1;
  string code=2;
  google.protobuf.StringValue name =3;
  google.protobuf.StringValue symbol=4;
  google.protobuf.StringValue modifiedBy=5;  
  google.protobuf.Timestamp modifiedDt = 6;
}
message mdlCurrencyList
{
	repeated mdlCurrency currency=1;
}

message mdlCurrencyRequest
{
	google.protobuf.StringValue currencyId = 1;
	google.protobuf.StringValue code=2;
	bool allData=3;
}

message mdlCurrencySaveResponse
{
	bool status=1;
	string message=2;
	string messageId =3;	
}






